# shallow

./: CMakeLists.txt  README.md
cmake/: shallow_deps.cmake
shallow/: CMakeLists.txt  RuntimeConfigSchema.json  config.hpp.in  shallow.hpp
shallow/app/: CMakeLists.txt  Driver.cpp  Driver.hpp  ExceptionHandler.cpp  ExceptionHandler.hpp  HelpException.hpp  RuntimeConfig.cpp  RuntimeConfig.hpp  VersionException.hpp  shallow.cpp
shallow/details/: Additive.hpp  BoundingBox.hpp  Euclidean.hpp  FixedHaloShape.hpp  FixedShape.hpp  Grid.hpp  HaloShape.hpp  Offset.hpp  Origin.hpp  Point.hpp  Polynomial.hpp  RootGrid.hpp  ShallowData.hpp  Shape.hpp  Spacing.hpp  Subgrid.hpp  Vec2.hpp  config.hpp  grid.hpp  import.hpp  macros.hpp
shallow_testing/: CMakeLists.txt  euclidean_test.cpp  root_grid_test.cpp  shallow_data_test.cpp  subgrid_test.cpp
